--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,17 @@
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+
+# Env & secrets
+.env
 venv/
+.idea/
+.vscode/
+
+# Tests
+.coverage
+htmlcov/
+
+# Containers
+*.log
