--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,3 +40,8 @@ httpx[cli]==0.27.0
 alembic==1.13.2
 cryptography>=42.0.4          # for Fernet encryption
 python-multipart==0.0.9       # FastAPI redirection helper
+
+python-dateutil==2.9.0.post0 
+tiktoken==0.6.0
+google-generativeai==0.5.4
+python-docx 
