--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
 node_modules
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+app.db
+
+# Environment files
+.env
+.env.local
+.env.production
+.env.development
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Virtual environment
+venv/
+env/
+ENV/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Build directories
+build/
+dist/
+.next/
+
+# Temporary files
+*.tmp
+*.temp
