--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,8 @@ httpx==0.27.0
 sqlmodel==0.0.16
 asyncpg==0.29.0
 aiosqlite==0.20.0
+# PostgreSQL drivers for production
+psycopg2-binary==2.9.9
 
 # Background jobs (Phase 3+)
 celery==5.4.0
@@ -26,6 +28,9 @@ redis==5.0.4
 google-auth==2.30.0
 google-auth-oauthlib==1.2.0
 google-api-python-client==2.126.0
+
+# Cloud SQL Proxy (for local development with Cloud SQL)
+cloud-sql-python-connector==1.10.0
 
 # AI Agent (Phase 4)
 google-adk
